HISTORY
=======

1.4 - Unreleased
----------------

- Add file css for styling slides of console. [Alberto Sartori]


1.3 - 2015-04-28
----------------

- Changed default css file to use css3 viewport units and some minor Layout
  changes.

- View and preview on speaker console now try to use the publics ratio of
  width to height.

- Added multilanguage support. Now german as well as english available.
  Language depends on the browsers language setting. Default remains english.

- Detecting next slide changed to manage more komplex html documents where
  the html elements may be in differnt branches of the DOM tree.

- In cases when the speaker console can not be opend a button overlay is
  showen on top. Open the window by clicking this button. This can help when
  Firefox prevents a not interactive windows.open.

- Added a message whether the preview showes a following slide or wheather you
  are returning the pressentation.

- Added additional css-files impressConsoleBlack.css, impressConsoleDark.css
  and impressConsoleGray.css. They all include impressConsole.css. Give
  css-file to init. Example:
  impressConsole().init('CSS/impressConsoleGray.css');

- Pressing <R> will now reset the timer.


1.2 - 2014-12-04
----------------

- Using the name "console" for the console cause a name conflict. It has been
  renamed to "impressConsole".

- Added a 'impress-console' css style to the preview windows, so you can style
  the previews separately, for example disabling transitions.


1.1 - 2013-02-19
----------------

- Fixed a bug with Firefox, where the console on opening would have the
  upper right corner in the center of the slide.


1.0 - 2012-12-19
----------------

- Added a "Ready/Working" status flag.

- The open() call now takes a parameter, css, so you can specify another
  css-file used for the console. This is primarily used so that you can have
  so you can include impress-console in tools and themes with more freedom.
