@@ -27,7 +27,8 @@
             'loading' : 'initalisiere',
             'ready' : 'Bereit',
             'moving' : 'in Bewegung',
-            'useAMPM' : false
+            'useAMPM' : false,
+            'gotoSlideNo': 'Gehe zur Foliennummer' // By Google translate
         };
         break;
     case 'en':
@@ -41,7 +42,8 @@
             'loading' : 'Loading',
             'ready' : 'Ready',
             'moving' : 'Moving',
-            'useAMPM' : false
+            'useAMPM' : false,
+            'gotoSlideNo': 'Go to slide number:'
         };
         break;
     }
@@ -207,6 +209,20 @@
             consoleWindow.timerStart = new Date();
         };
 
+        var gotoSlide = function (event) {
+            var target = event.view.prompt("Enter slide number");
+
+            if (isNaN(target)) {
+                var goto_status = impress().goto(target);
+            } else {
+                // goto(0) goes to step-1, so substract
+                var goto_status = impress().goto(parseInt(target) - 1);
+            }
+            if (goto_status === false) {
+                event.view.alert("Slide not found: '" + target + "'");
+            }
+        };
+
         // Show a clock
         var clockTick = function () {
             var now = new Date();
@@ -239,22 +255,22 @@
             }
         };
 
-        var registerKeyEvent = function(keyCodes, handler, window) {
-            if (window === undefined) {
-                window = consoleWindow;
+        var registerKeyEvent = function(keyCodes, handler, wnd) {
+            if (wnd === undefined) {
+                wnd = consoleWindow;
             }
 
             // prevent default keydown action when one of supported key is pressed
-            window.document.addEventListener("keydown", function ( event ) {
+            wnd.document.addEventListener("keydown", function ( event ) {
                 if ( !event.ctrlKey && !event.altKey && !event.shiftKey && !event.metaKey && keyCodes.indexOf(event.keyCode) !== -1) {
                     event.preventDefault();
                 }
             }, false);
 
             // trigger impress action on keyup
-            window.document.addEventListener("keyup", function ( event ) {
+            wnd.document.addEventListener("keyup", function ( event ) {
                 if ( !event.ctrlKey && !event.altKey && !event.shiftKey && !event.metaKey && keyCodes.indexOf(event.keyCode) !== -1) {
-                        handler();
+                        handler(event);
                         event.preventDefault();
                 }
             }, false);
@@ -315,7 +331,7 @@
                 consoleWindow.document.write(consoleTemplate.replace("{{cssFile}}", cssFile).replace(/{{.*?}}/gi, function (x){ return lang[x.substring(2, x.length-2)]; }));
                 consoleWindow.document.title = 'Speaker Console (' + document.title + ')';
                 consoleWindow.impress = window.impress;
-                // We set this flag so we can detect it later, to prevent infinite popups.
+                // We set this flag so we can d etect it later, to prevent infinite popups.
                 consoleWindow.isconsoleWindow = true;
                 // Set the onload function:
                 consoleWindow.onload = consoleOnLoad;
@@ -333,6 +349,9 @@
                 registerKeyEvent([32], spaceHandler);
                 // 82: R
                 registerKeyEvent([82], timerReset);
+                // 71: G
+                registerKeyEvent([71], gotoSlide, consoleWindow);
+                registerKeyEvent([71], gotoSlide, window);
 
                 // Cleanup
                 consoleWindow.onbeforeunload = function() {
