@@ -6,6 +6,9 @@ HISTORY
 
 - Add file css for styling slides of console. [Alberto Sartori]
 
+- Added a G shortcut to Goto a slide number.
+  [Based on work by Frederik Möllers]
+
 
 1.3 - 2015-04-28
 ----------------
